# rust-sql-to-nosql

./: Cargo.toml  README.md  queries.txt  redis.sql.bnf
examples/: pattern_match.rs  simple.rs
src/: commands.rs  lib.rs  main.rs
src/ast/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
src/context/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
src/lua/: mod.rs
src/pattern/: combinators.rs  cte.rs  join.rs  mod.rs  set_opts.TODO  subquery.rs
src/pattern/extractors/: common.rs  delete_ops.rs  hash_ops.rs  insert_ops.rs  join_ops.rs  list_ops.rs  mod.rs  query_extractors.rs  set_ops.rs  string_ops.rs  zset_ops.rs
src/pattern/matchers/: common.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs
src/rules/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
src/templates/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
src/templates/lua/generic/: del.lua
src/templates/lua/hash/: delete_field.lua  get.lua  getall.lua  hgetall.lua  hmget.lua  update.lua
src/templates/lua/list/: delete_value.lua  get_index.lua  getall.lua  lrange.lua  push.lua  update.lua
src/templates/lua/set/: add.lua  delete_member.lua  getall.lua  ismember.lua  sismember_multi.lua
src/templates/lua/string/: get.lua  mget.lua  set.lua
src/templates/lua/utils/: aggregation.lua  data_processing.lua  type_conversion.lua
src/templates/lua/zset/: delete_member.lua  getall.lua  (+3 more)
tests/: hash_ops_tests.rs  integration_test.rs  list_ops_tests.rs  set_ops_tests.rs  string_ops_tests.rs  test_bench.rs  update_ops_tests.rs  zset_ops_tests.rs
tests/test_utils/: mod.rs
(+4 files in other folders)
