[package]
name = "sql_redis"
version = "0.2.0"
edition = "2021"
authors = ["Redis SQL Mapper"]
description = "A declarative SQL to Redis command transformer based on pattern matching"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/sql_redis"
keywords = ["redis", "sql", "database", "transformation", "parser"]
categories = ["database"]

[dependencies]
clap = { version = "4.5.31", features = ["derive", "cargo"] }
sqlparser = "0.55.0"
tera = "1.20.0"
tracing = "0.1.41"

[[example]]
name = "pattern_match"
path = "examples/pattern_match.rs"

[lib]
name = "sql_redis"
path = "src/lib.rs"
